[package]
name = "nvrr"
version = "0.1.1"
edition = "2024"
description = "Simple neovim-remote in Rust"
license = "MIT"
repository = "https://github.com/Dimfred/nvrr"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4.5.60", features = ["derive"] }
rmpv = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
nvim-rs = { version = "0.9.2", features = ["use_tokio"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
